--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                </div>
             </section>
          </div>
-         <a href="https://github.com/Nitesh123-Nits?tab=repositories" class="github-link more-project">More Projects</a>
+         <a href="https://github.com/Nitesh123-Nits?tab=repositories" class="more-project">More Projects</a>
       </article>
       <section class="aboutme" id="about">
          <div>
